assets/network.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Network stack with VPC, Subnets, NAT Gateway, Internet Gateway, and DynamoDB VPC Endpoint",
  "Parameters": {
    "EnvironmentName": {
      "Type": "String",
      "Default": "ccj"
    },
    "VpcCIDR": {
      "Type": "String",
      "Default": "10.0.0.0/16"
    },
    "PublicSubnet1CIDR": {
      "Type": "String",
      "Default": "10.0.1.0/24"
    },
    "PublicSubnet2CIDR": {
      "Type": "String",
      "Default": "10.0.2.0/24"
    },
    "PrivateSubnet1CIDR": {
      "Type": "String",
      "Default": "10.0.3.0/24"
    },
    "PrivateSubnet2CIDR": {
      "Type": "String",
      "Default": "10.0.4.0/24"
    },
    "EnablePrivateDNS": {
      "Type": "String",
      "Default": "false",
      "AllowedValues": ["true", "false"]
    }
  },
  "Resources": {
    "VPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": {"Ref": "VpcCIDR"},
        "EnableDnsHostnames": true,
        "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${EnvironmentName}-VPC"}}]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${EnvironmentName}-IGW"}}]
      }
    },
    "InternetGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId": {"Ref": "InternetGateway"},
        "VpcId": {"Ref": "VPC"}
      }
    },
    "PublicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "AvailabilityZone": {"Fn::Select": [0, {"Fn::GetAZs": ""}]},
        "CidrBlock": {"Ref": "PublicSubnet1CIDR"},
        "MapPublicIpOnLaunch": true,
        "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${EnvironmentName}-PublicSubnet1"}}]
      }
    },
    "PublicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "AvailabilityZone": {"Fn::Select": [1, {"Fn::GetAZs": ""}]},
        "CidrBlock": {"Ref": "PublicSubnet2CIDR"},
        "MapPublicIpOnLaunch": true,
        "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${EnvironmentName}-PublicSubnet2"}}]
      }
    },
    "PrivateSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "AvailabilityZone": {"Fn::Select": [0, {"Fn::GetAZs": ""}]},
        "CidrBlock": {"Ref": "PrivateSubnet1CIDR"},
        "MapPublicIpOnLaunch": false,
        "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${EnvironmentName}-PrivateSubnet1"}}]
      }
    },
    "PrivateSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "AvailabilityZone": {"Fn::Select": [1, {"Fn::GetAZs": ""}]},
        "CidrBlock": {"Ref": "PrivateSubnet2CIDR"},
        "MapPublicIpOnLaunch": false,
        "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${EnvironmentName}-PrivateSubnet2"}}]
      }
    },
    "NatGatewayEIP": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "InternetGatewayAttachment",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NatGateway": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": {"Fn::GetAtt": ["NatGatewayEIP", "AllocationId"]},
        "SubnetId": {"Ref": "PublicSubnet1"},
        "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${EnvironmentName}-NatGateway"}}]
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${EnvironmentName}-PublicRouteTable"}}]
      }
    },
    "DefaultPublicRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "InternetGatewayAttachment",
      "Properties": {
        "RouteTableId": {"Ref": "PublicRouteTable"},
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {"Ref": "InternetGateway"}
      }
    },
    "PublicSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {"Ref": "PublicRouteTable"},
        "SubnetId": {"Ref": "PublicSubnet1"}
      }
    },
    "PublicSubnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {"Ref": "PublicRouteTable"},
        "SubnetId": {"Ref": "PublicSubnet2"}
      }
    },
    "PrivateRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "Tags": [{"Key": "Name", "Value": {"Fn::Sub": "${EnvironmentName}-PrivateRouteTable"}}]
      }
    },
    "DefaultPrivateRoute": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {"Ref": "PrivateRouteTable"},
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {"Ref": "NatGateway"}
      }
    },
    "PrivateSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {"Ref": "PrivateRouteTable"},
        "SubnetId": {"Ref": "PrivateSubnet1"}
      }
    },
    "PrivateSubnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {"Ref": "PrivateRouteTable"},
        "SubnetId": {"Ref": "PrivateSubnet2"}
      }
    },
    "DynamoDBEndpoint": {
      "Type": "AWS::EC2::VPCEndpoint",
      "Properties": {
        "VpcId": {"Ref": "VPC"},
        "ServiceName": {"Fn::Sub": "com.amazonaws.${AWS::Region}.dynamodb"},
        "VpcEndpointType": "Interface",
        "PrivateDnsEnabled": {"Ref": "EnablePrivateDNS"},
        "SubnetIds": [
          {"Ref": "PrivateSubnet1"},
          {"Ref": "PrivateSubnet2"}
        ],
        "SecurityGroupIds": [
          {"Fn::GetAtt": ["VPC", "DefaultSecurityGroup"]}
        ],
        "PolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": "*",
              "Action": [
                "dynamodb:PutItem",
                "dynamodb:GetItem",
                "dynamodb:BatchWriteItem",
                "dynamodb:BatchGetItem", 
                "dynamodb:Scan",
                "dynamodb:DeleteItem",
                "dynamodb:*"
              ],
              "Resource": "*"
            }
          ]
        }
      }
    },
    "StackNameParameter": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Name": "/network/StackName",
        "Type": "String",
        "Value": {"Ref": "AWS::StackName"}
      }
    },
    "VpcIdParameter": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Name": "/network/VpcId",
        "Type": "String",
        "Value": {"Ref": "VPC"}
      }
    },
    "PublicSubnet1Parameter": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Name": "/network/PublicSubnet1",
        "Type": "String",
        "Value": {"Ref": "PublicSubnet1"}
      }
    },
    "PublicSubnet2Parameter": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Name": "/network/PublicSubnet2",
        "Type": "String",
        "Value": {"Ref": "PublicSubnet2"}
      }
    },
    "PrivateSubnet1Parameter": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Name": "/network/PrivateSubnet1",
        "Type": "String",
        "Value": {"Ref": "PrivateSubnet1"}
      }
    },
    "PrivateSubnet2Parameter": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Name": "/network/PrivateSubnet2",
        "Type": "String",
        "Value": {"Ref": "PrivateSubnet2"}
      }
    },
    "NatGatewayIdParameter": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Name": "/network/NatGatewayId",
        "Type": "String",
        "Value": {"Ref": "NatGateway"}
      }
    },
    "DefaultSecurityGroupParameter": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Name": "/network/DefaultSecurityGroup",
        "Type": "String",
        "Value": {"Fn::GetAtt": ["VPC", "DefaultSecurityGroup"]}
      }
    },
    "DynamoDBEndpointIdParameter": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Name": "/network/DynamoDBEndpointId",
        "Type": "String",
        "Value": {"Ref": "DynamoDBEndpoint"}
      }
    },
    "DynamoDBEndpointDNSEntryParameter": {
      "Type": "AWS::SSM::Parameter",
      "Properties": {
        "Name": "/network/DynamoDBEndpointDNSEntry",
        "Type": "String",
        "Value": {
          "Fn::Join": [
            "",
            [
              "https://",
              {
                "Fn::Select": [
                  1,
                  {
                    "Fn::Split": [
                      ":",
                      {
                        "Fn::Select": [
                          0,
                          {"Fn::GetAtt": ["DynamoDBEndpoint", "DnsEntries"]}
                        ]
                      }
                    ]
                  }
                ]
              }
            ]
          ]
        }
      }
    }
  },
  "Outputs": {
    "StackName": {
      "Description": "The name of this stack",
      "Value": {"Ref": "AWS::StackName"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}"}}
    },
    "VpcId": {
      "Description": "VPC ID",
      "Value": {"Ref": "VPC"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-VpcId"}}
    },
    "PublicSubnet1": {
      "Description": "Public Subnet 1",
      "Value": {"Ref": "PublicSubnet1"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-PublicSubnet1"}}
    },
    "PublicSubnet2": {
      "Description": "Public Subnet 2",
      "Value": {"Ref": "PublicSubnet2"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-PublicSubnet2"}}
    },
    "PrivateSubnet1": {
      "Description": "Private Subnet 1",
      "Value": {"Ref": "PrivateSubnet1"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-PrivateSubnet1"}}
    },
    "PrivateSubnet2": {
      "Description": "Private Subnet 2",
      "Value": {"Ref": "PrivateSubnet2"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-PrivateSubnet2"}}
    },
    "NatGatewayId": {
      "Description": "NAT Gateway ID",
      "Value": {"Ref": "NatGateway"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-NatGatewayId"}}
    },
    "DefaultSecurityGroup": {
      "Description": "Default Security Group",
      "Value": {"Fn::GetAtt": ["VPC", "DefaultSecurityGroup"]},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-DefaultSecurityGroup"}}
    },
    "DynamoDBEndpointId": {
      "Description": "DynamoDB VPC Endpoint ID",
      "Value": {"Ref": "DynamoDBEndpoint"},
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-DynamoDBEndpointId"}}
    },
    "DynamoDBEndpointDNSEntry": {
      "Description": "DynamoDB VPC Endpoint DNS Name",
      "Value": {
        "Fn::Join": [
          "",
          [
            "https://",
            {
              "Fn::Select": [
                1,
                {
                  "Fn::Split": [
                    ":",
                    {
                      "Fn::Select": [
                        0,
                        {"Fn::GetAtt": ["DynamoDBEndpoint", "DnsEntries"]}
                      ]
                    }
                  ]
                }
              ]
            }
          ]
        ]
      },
      "Export": {"Name": {"Fn::Sub": "${AWS::StackName}-DynamoDBEndpointDNSEntry"}}
    }
  }
}
